tests/errors/substructural/check/move_of_non_move_struct_errors.err.expected
error: at 7:13: [SUB-MoveOfNonMove] In function 'f', block 'entry': cannot move non-Move type Linear
   |
 7 |             y = move x;
   |             ^^^^^^^^^^
  hint: linear types cannot be moved out of non-Move contexts
error: at 8:13: [SUB-MoveOfNonMove] In function 'f', block 'entry': cannot move non-Move type Linear
   |
 8 |             call sink(move y);
   |             ^^^^^^^^^^^^^^^^^
  hint: linear types cannot be moved out of non-Move contexts
